--- a/cartasColeccionables.html
+++ b/cartasColeccionables.html
@@ -116,7 +116,7 @@
         </main>
         <footer class="footer">
             <div class="social-media">
-                <a href="https://www.facebook.com" target="_blank"><img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/facebook.png" alt="Facebook"></a>
+                <a href="https://www.facebook.com" target="_blank"><img src="facebook.png" alt="Facebook"></a>
                 <a href="https://www.twitter.com" target="_blank"><img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/gorjeo.png" alt="Twitter"></a>
                 <a href="https://www.instagram.com" target="_blank"><img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/instagram.png" alt="Instagram"></a>
                 
