--- a/cartasColeccionables.html
+++ b/cartasColeccionables.html
@@ -52,7 +52,7 @@
                 
                 <div class="card">
                     <div class="card-header">
-                        <img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/33.jpg" alt="box 1">
+                        <img src="33.jpg" alt="box 1">
                         <div class="reseña">
                         <h3>Booster box Magic The Gathering The lord of the rings Tales of middle-earth</h3>
                     </div>
@@ -68,7 +68,7 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/22.jpg" alt="box 2">
+                        <img src="22.jpg" alt="box 2">
                         <div class="reseña">
                         <h3>Booster box Magic The Gathering Phyrexia: All Will Be One Set<</h3>
                     </div>
@@ -83,7 +83,7 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/55.jpg" alt="box 3">
+                        <img src="55.jpg" alt="box 3">
                         <div class="reseña">
                         <h3>Booster box Magic The Gathering The Lost Caverns of Ixalan<</h3>
                     </div>
@@ -99,7 +99,7 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/44.jpg" alt="box 4">
+                        <img src="44.jpg" alt="box 4">
                         <div class="reseña">
                         <h3>>Booster box Magic The Gathering Ravnica Remastered</h3>
                     </div>
@@ -116,9 +116,9 @@
         </main>
         <footer class="footer">
             <div class="social-media">
-                <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
-                <a href="https://www.twitter.com" target="_blank"><img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/gorjeo.png" alt="Twitter"></a>
-                <a href="https://www.instagram.com" target="_blank"><img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com" target="_blank"><img src="facebook.png" alt="Facebook"></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="gorjeo.png" alt="Twitter"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="instagram.png" alt="Instagram"></a>
                 
             </div>
             <p class="parrafoFinal">
