--- a/index.html
+++ b/index.html
@@ -53,37 +53,37 @@
       <section class="gallery">
         <img
           class="gallery__a"
-          src="/Users/usuario/Desktop/curso front 2024/proyecto/images/a.jpg"
+          src="a.jpg"
           alt="Guerrero y cuervo"
         />
         <img
           class="gallery__a"
-          src="/Users/usuario/Desktop/curso front 2024/proyecto/images/b.jpg"
+          src="b.jpg"
           alt="Dragón"
         />
         <img
           class="gallery__a"
-          src="/Users/usuario/Desktop/curso front 2024/proyecto/images/c.jpg"
+          src="c.jpg"
           alt="Reina y rosas"
         />
         <img
           class="gallery__a"
-          src="/Users/usuario/Desktop/curso front 2024/proyecto/images/d.jpg"
+          src="d.jpg"
           alt="Portal"
         />
         <img
           class="gallery__a"
-          src="/Users/usuario/Desktop/curso front 2024/proyecto/images/e.jpg"
+          src="e.jpg"
           alt="Dama y dragón"
         />
         <img
           class="gallery__a"
-          src="/Users/usuario/Desktop/curso front 2024/proyecto/images/f.jpg"
+          src="f.jpg"
           alt="Mago"
         />
         <img
           class="gallery__a"
-          src="/Users/usuario/Desktop/curso front 2024/proyecto/images/i.jpg"
+          src="i.jpg"
           alt="Brujo"
         />
       </section>
@@ -193,9 +193,9 @@
 
     <footer class="footer">
         <div class="social-media">
-            <a href="https://www.facebook.com" target="_blank"><img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/facebook.png" alt="Facebook"></a>
-            <a href="https://www.twitter.com" target="_blank"><img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/gorjeo.png" alt="Twitter"></a>
-            <a href="https://www.instagram.com" target="_blank"><img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/instagram.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="facebook.png" alt="Facebook"></a>
+            <a href="https://www.twitter.com" target="_blank"><img src="gorjeo.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="instagram.png" alt="Instagram"></a>
             
         </div>
       <p class="parrafoFinal">
