--- a/juegosDeMesa.html
+++ b/juegosDeMesa.html
@@ -48,7 +48,7 @@
                 
                 <div class="juego">
                     <div class="game-header">
-                        <img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/99a.jpg" alt="juego 1">
+                        <img src="99a.jpg" alt="juego 1">
                         <div class="reseña">
                         <h3>Colonos de Catán</h3>
                     </div>
@@ -67,7 +67,7 @@
 
                 <div class="juego">
                     <div class="game-header">
-                        <img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/88a.jpg" alt="juego 2">
+                        <img src="88a.jpg" alt="juego 2">
                         <div class="reseña">
                         <h3>Krieg</h3>
                     </div>
@@ -84,7 +84,7 @@
 
                 <div class="juego">
                     <div class="game-header">
-                        <img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/77a.jpg" alt="juego 3">
+                        <img src="77a.jpg" alt="juego 3">
                         <div class="reseña">
                         <h3>Los castillos de Borgoña (the castle of Burgundy)</h3>
                     </div>
@@ -103,7 +103,7 @@
 
                 <div class="juego">
                     <div class="game-header">
-                        <img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/66a.jpg" alt="juego 4">
+                        <img src="66a.jpg" alt="juego 4">
                         <div class="reseña">
                         <h3>Civilization -Un nuevo amanecer, juego de mesa-</h3>
                     </div>
@@ -124,9 +124,9 @@
         </main>
         <footer class="footer">
             <div class="social-media">
-                <a href="https://www.facebook.com" target="_blank"><img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/facebook.png" alt="Facebook"></a>
-                <a href="https://www.twitter.com" target="_blank"><img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/gorjeo.png" alt="Twitter"></a>
-                <a href="https://www.instagram.com" target="_blank"><img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com" target="_blank"><img src="facebook.png" alt="Facebook"></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="gorjeo.png" alt="Twitter"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="instagram.png" alt="Instagram"></a>
                 
             </div>
             <p class="parrafoFinal">
