--- a/contactanos.html
+++ b/contactanos.html
@@ -60,9 +60,9 @@
         
         <footer class="footer">
             <div class="social-media">
-                <a href="https://www.facebook.com" target="_blank"><img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/facebook.png" alt="Facebook"></a>
-                <a href="https://www.twitter.com" target="_blank"><img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/gorjeo.png" alt="Twitter"></a>
-                <a href="https://www.instagram.com" target="_blank"><img src="/Users/usuario/Desktop/curso front 2024/proyecto/images/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com" target="_blank"><img src="facebook.png" alt="Facebook"></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="gorjeo.png" alt="Twitter"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="instagram.png" alt="Instagram"></a>
                 
             </div>
             <p class="parrafoFinal">
