--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               >Cartas RPG Magic The Gathering</a
             >
           </li>
-          <li><a href="Contactanos.html">Contáctanos</a></li>
+          <li><a href="contactanos.html">Contáctanos</a></li>
           <li class="login-container">
             <form id="login-form">
               <label for="email">Email:</label>
