--- a/index.html
+++ b/index.html
@@ -2,19 +2,13 @@
 <html lang="es">
   <head>
     <title>Epic Collections</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="esta página trata sobre compra y venta de coleccionables y hobbies"
-    />
-    <meta name="keywords" content="cds,juegos,cartas,colecciones" />
-    <meta name="author" content="Ing.Tomas" />
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="esta página trata sobre compra y venta de coleccionables y hobbies">
+    <meta name="keywords" content="cds,juegos,cartas,colecciones">
+    <meta name="author" content="Ing.Tomas">
   </head>
   <body>
     <header>
@@ -24,18 +18,14 @@
           <li><a href="cdsMetal&Rock.html">Cd's Power Metal</a></li>
           <li><a href="juegosDeMesa.html">Juegos de mesa</a></li>
           <li><a href="literaturaFantastica.html">Literatura fantástica</a></li>
-          <li>
-            <a href="cartasColeccionables.html"
-              >Cartas RPG Magic The Gathering</a
-            >
-          </li>
-          <li><a href="contactanos.html">Contáctanos</a></li>
+          <li><a href="cartasColeccionables.html">Cartas RPG Magic The Gathering</a></li>
+          <li><a href="Contactanos.html">Contáctanos</a></li>
           <li class="login-container">
             <form id="login-form">
               <label for="email">Email:</label>
-              <input type="email" id="email" name="email" required />
+              <input type="email" id="email" name="email" required>
               <label for="password">Contraseña:</label>
-              <input type="password" id="password" name="password" required />
+              <input type="password" id="password" name="password" required>
               <button type="submit">Iniciar sesión</button>
             </form>
           </li>
@@ -51,85 +41,30 @@
         tierras mágicas e inexploradas."
       </p>
       <section class="gallery">
-        <img
-          class="gallery__a"
-          src="a.jpg"
-          alt="Guerrero y cuervo"
-        />
-        <img
-          class="gallery__a"
-          src="b.jpg"
-          alt="Dragón"
-        />
-        <img
-          class="gallery__a"
-          src="c.jpg"
-          alt="Reina y rosas"
-        />
-        <img
-          class="gallery__a"
-          src="d.jpg"
-          alt="Portal"
-        />
-        <img
-          class="gallery__a"
-          src="e.jpg"
-          alt="Dama y dragón"
-        />
-        <img
-          class="gallery__a"
-          src="f.jpg"
-          alt="Mago"
-        />
-        <img
-          class="gallery__a"
-          src="i.jpg"
-          alt="Brujo"
-        />
+        <img class="gallery__a" src="images/a.jpg" alt="Guerrero y cuervo">
+        <img class="gallery__a" src="images/b.jpg" alt="Dragón">
+        <img class="gallery__a" src="images/c.jpg" alt="Reina y rosas">
+        <img class="gallery__a" src="images/d.jpg" alt="Portal">
+        <img class="gallery__a" src="images/e.jpg" alt="Dama y dragón">
+        <img class="gallery__a" src="images/f.jpg" alt="Mago">
+        <img class="gallery__a" src="images/i.jpg" alt="Brujo">
       </section>
-
       <section id="registro">
         <h2 class="h2">Crear una Cuenta</h2>
         <p class="parrafo">
           Compra artículos en nuestra tienda virtual, recibe novedades por
           email, y forma parte de esta comunidad.
         </p>
-        <form
-          action="https://formspree.io/f/xeoqaezz"
-          method="post"
-          class="form-registro"
-        >
+        <form action="https://formspree.io/f/xeoqaezz" method="post" class="form-registro">
           <label for="username">Nombre de Usuario</label>
-          <input
-            type="text"
-            id="username"
-            name="username"
-            placeholder="Ingresa tu nombre de usuario"
-            required
-          />
-
+          <input type="text" id="username" name="username" placeholder="Ingresa tu nombre de usuario" required>
           <label for="email">Correo Electrónico</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Ingresa tu correo electrónico"
-            required
-          />
-
+          <input type="email" id="email" name="email" placeholder="Ingresa tu correo electrónico" required>
           <label for="password">Contraseña</label>
-          <input
-            type="password"
-            id="password"
-            name="password"
-            placeholder="Crea una contraseña"
-            required
-          />
-
+          <input type="password" id="password" name="password" placeholder="Crea una contraseña" required>
           <button type="submit">Registrarse</button>
         </form>
       </section>
-
       <section id="categorias">
         <article>
           <h3 class="h3">Libros de Literatura Fantástica</h3>
@@ -140,7 +75,6 @@
             sección literaturaFantastica encontrarás las ofertas del mes.
           </p>
         </article>
-
         <article>
           <h3>Cartas Coleccionables Magic The Gathering</h3>
           <p class="parrafo">
@@ -150,7 +84,6 @@
             booster pack sellado de 36 boosters .
           </p>
         </article>
-
         <article>
           <h3>Juegos de Mesa</h3>
           <p class="parrafo">
@@ -161,7 +94,6 @@
             envío a puerta
           </p>
         </article>
-
         <article>
           <h3>CDs de Metal y Rock</h3>
           <p class="parrafo">
@@ -175,31 +107,18 @@
         </article>
       </section>
     </main>
-
     <aside id="aside">
-      <a
-        href="https://www.mediavida.com/foro/juegos-mesa-rol"
-        target="_blank"
-        class="button"
-        >Foro juegos de mesa y cartas</a
-      >
-      <a
-        href="https://culturageek.com.ar/category/tecnoticias/"
-        target="_blank"
-        class="button"
-        >Noticias Geeks</a
-      >
+      <a href="https://www.mediavida.com/foro/juegos-mesa-rol" target="_blank" class="button">Foro juegos de mesa y cartas</a>
+      <a href="https://culturageek.com.ar/category/tecnoticias/" target="_blank" class="button">Noticias Geeks</a>
     </aside>
-
     <footer class="footer">
         <div class="social-media">
-            <a href="https://www.facebook.com" target="_blank"><img src="facebook.png" alt="Facebook"></a>
-            <a href="https://www.twitter.com" target="_blank"><img src="gorjeo.png" alt="Twitter"></a>
-            <a href="https://www.instagram.com" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-            
+            <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="https://www.twitter.com" target="_blank"><img src="images/gorjeo.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
         </div>
       <p class="parrafoFinal">
         2024 Epic Collections. Todos los derechos reservados.
     </footer>
   </body>
-</html>
+</html> 
