--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         tierras mágicas e inexploradas."
       </p>
       <section class="gallery">
-        <img class="gallery__a" src="images/a.jpg" alt="Guerrero y cuervo">
-        <img class="gallery__a" src="images/b.jpg" alt="Dragón">
-        <img class="gallery__a" src="images/c.jpg" alt="Reina y rosas">
-        <img class="gallery__a" src="images/d.jpg" alt="Portal">
-        <img class="gallery__a" src="images/e.jpg" alt="Dama y dragón">
-        <img class="gallery__a" src="images/f.jpg" alt="Mago">
-        <img class="gallery__a" src="images/i.jpg" alt="Brujo">
+        <img class="gallery__a" src="a.jpg" alt="Guerrero y cuervo">
+        <img class="gallery__a" src="b.jpg" alt="Dragón">
+        <img class="gallery__a" src="c.jpg" alt="Reina y rosas">
+        <img class="gallery__a" src="d.jpg" alt="Portal">
+        <img class="gallery__a" src="e.jpg" alt="Dama y dragón">
+        <img class="gallery__a" src="f.jpg" alt="Mago">
+        <img class="gallery__a" src="i.jpg" alt="Brujo">
       </section>
       <section id="registro">
         <h2 class="h2">Crear una Cuenta</h2>
