--- a/cdsMetal&Rock.html
+++ b/cdsMetal&Rock.html
@@ -43,7 +43,7 @@
                 <h3 class="h3">Ofertas del Mes</h3>
                 <div class="cd">
                     <div class="cd-header">
-                        <img src="images/111.jpg" alt="disco 1">
+                        <img src="111.jpg" alt="disco 1">
                         <div class="reseña">
                         <h3>Tales from the Twilight World - Blind Guardian</h3>
                     </div>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="cd">
                     <div class="cd-header">
-                    <img src="images/222.jpg" alt="disco 2">
+                    <img src="222.jpg" alt="disco 2">
                     <div class="reseña">
                         <h3>Glory to the Brave - Hammerfall</h3>
                     </div>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="cd">
                     <div class="cd-header">
-                    <img src="images/333.jpg" alt="disco 3">
+                    <img src="333.jpg" alt="disco 3">
                     <div class="reseña">
                         <h3>The fourth legacy - Kamelot</h3>
                     </div>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="cd">
                     <div class="cd-header">
-                    <img src="images/444.jpg" alt="disco 4">
+                    <img src="444.jpg" alt="disco 4">
                     <div class="reseña">
                         <h3>The damnation game - Symphony X</h3>
                     </div>
@@ -105,9 +105,9 @@
         </main>
             <footer class="footer">
                 <div class="social-media">
-                <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
-                <a href="https://www.twitter.com" target="_blank"><img src="images/gorjeo.png" alt="Twitter"></a>
-                <a href="https://www.instagram.com" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com" target="_blank"><img src="facebook.png" alt="Facebook"></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="gorjeo.png" alt="Twitter"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="instagram.png" alt="Instagram"></a>
                 </div>
                 <p class="parrafoFinal">
                     2024 Epic Collections. Todos los derechos reservados.
