--- a/literaturaFantastica.html
+++ b/literaturaFantastica.html
@@ -34,8 +34,8 @@
         <main>
             <h2 class="h2">Explora el Fascinante Mundo de la Literatura Fantástica</h2>
             <article class="articulo-genero">
-                <h3 class="h3">Literatura épica y fantástica, grandes escritores cuya imaginación no tuvo límites, y fueron grandes cultores e inspiradores de la CI-FI moderna.
-                    Lovecraft,Howard,Tolkien, e incluso el mismísimo Edgar Allan Poe</h3>
+                <h3 class="h3">Literatura épica y fantástica, grandes escritores cuya imaginación no tuvo límites, y fueron grandes cultores e inspiradores de la SCI-FI moderna.
+                    Lovecraft, Howard, Tolkien, e incluso el mismísimo Edgar Allan Poe</h3>
                 <p>Sumérgete en historias de mundos mágicos, criaturas místicas y aventuras épicas que han cautivado a lectores por generaciones.
                     Este mes traemos libros que ya son clásicos del género, en tapa dura y versión de colección.</p>
             </article>
