--- a/cdsMetal&Rock.html
+++ b/cdsMetal&Rock.html
@@ -93,7 +93,7 @@
                         <h3>The damnation game - Symphony X</h3>
                     </div>
                         <p>The Damnation Game es el segundo álbum del grupo Symphony X cuál surgió solamente ocho meses después de su primer álbum, Symphony X. 
-                            Con Rusell Allen como nueva voz y la técnica llamativa del virtuoso Michael Romeo en guitarra, este disco de metal progresivo supo cautivar el oído de los ya exigentes enamorados del género metal progresivo, 
+                            Con Rusell Allen como nueva voz y la técnica llamativa del virtuoso Michael Romeo en guitarra, este disco supo cautivar el oído de los ya exigentes enamorados del género metal progresivo, 
                             cuyos exponentes sobresalientes de este género virtuoso, eran ni más ni menos que unos tales "Dream Theater".Recomendado. Lucas Zamarbide (cantante de rock&blues)</p>
                     </div>
                     <div class="precio">
