--- a/contactanos.html
+++ b/contactanos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-    <title>Cartas RPG Magic The Gathering </title>
+    <title>contacto</title>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
