--- a/cdsMetal&Rock.html
+++ b/cdsMetal&Rock.html
@@ -41,60 +41,7 @@
                 leer el libro con las letras y escuchar un disco de corrido, tema por tema.</p>
         </article>
             <h3 class="ofertas-del-mes">Ofertas del Mes</h3>
-        <section id="cds" class="grid-container">
-            <div class="cd-item" data-id="1">
-                <img src="images/111.jpg" alt="disco 1">
-                <button class="info-btn" data-id="1">Más información!</button>
-                <div class="cd-info">
-                    <h3>Tales from the Twilight World</h3>
-                    <p class="autor">Blind Guardian</p>
-                    <p><i>"Tales from the Twilight World es el tercer disco del grupo alemán de power metal Blind Guardian..."</i></p>
-                    <div class="cd-footer">
-                        <p class="precio">$27000</p>
-                        <button class="add-to-cart" data-id="1">Agregar al carrito</button>
-                    </div>
-                </div>
-            </div>
-            <div class="cd-item" data-id="2">
-                <img src="images/222.jpg" alt="disco 2">
-                <button class="info-btn" data-id="2">Más información!</button>
-                <div class="cd-info">
-                    <h3>Glory to the Brave</h3>
-                    <p class="autor">HammerFall</p>
-                    <p><i>"Glory to the Brave es el primer disco de la banda sueca de Heavy Metal HammerFall..."</i></p>
-                    <div class="cd-footer">
-                        <p class="precio">$23000</p>
-                        <button class="add-to-cart" data-id="2">Agregar al carrito</button>
-                    </div>
-                </div>
-            </div>
-            <div class="cd-item" data-id="3">
-                <img src="images/333.jpg" alt="disco 3">
-                <button class="info-btn" data-id="3">Más información!</button>
-                <div class="cd-info">
-                    <h3>The Fourth Legacy</h3>
-                    <p class="autor">Kamelot</p>
-                    <p><i>"The Fourth Legacy es el cuarto álbum de estudio de la banda estadounidense de power metal Kamelot..."</i></p>
-                    <div class="cd-footer">
-                        <p class="precio">$30000</p>
-                        <button class="add-to-cart" data-id="3">Agregar al carrito</button>
-                    </div>
-                </div>
-            </div>
-            <div class="cd-item" data-id="4">
-                <img src="images/444.jpg" alt="disco 4">
-                <button class="info-btn" data-id="4">Más información!</button>
-                <div class="cd-info">
-                    <h3>The Damnation Game</h3>
-                    <p class="autor">Symphony X</p>
-                    <p><i>"The Damnation Game es el segundo álbum del grupo Symphony X..."</i></p>
-                    <div class="cd-footer">
-                        <p class="precio">$21000</p>
-                        <button class="add-to-cart" data-id="4">Agregar al carrito</button>
-                    </div>
-                </div>
-            </div>
-        </section>
+            <div div id="cds" class="grid-container"></div>
     </main>
     <footer class="footer">
         <div class="social-media">
@@ -108,3 +55,4 @@
         <script src="script.js" defer></script>
     </body>
 </html>
+
