--- a/cdsMetal&Rock.html
+++ b/cdsMetal&Rock.html
@@ -41,7 +41,7 @@
                 leer el libro con las letras y escuchar un disco de corrido, tema por tema.</p>
         </article>
             <h3 class="ofertas-del-mes">Ofertas del Mes</h3>
-            <div div id="cds" class="grid-container"></div>
+            <div id="cds" class="grid-container"></div>
     </main>
     <footer class="footer">
         <div class="social-media">
